PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2017, PHP 7.1.4

- DOM:
  . Fixed bug #74004 (LIBXML_NOWARNING flag ingnored on loadHTML*).
    (somedaysummer)

16 Mar 2017, PHP 7.1.3

- Core:
  . Fixed bug #74157 (Segfault with nested generators). (Laruence)
  . Fixed bug #74164 (PHP hangs when an invalid value is dynamically passed to
    typehinted by-ref arg). (Laruence)
  . Fixed bug #74093 (Maximum execution time of n+2 seconds exceed not written
    in error_log). (Laruence)
  . Fixed bug #73989 (PHP 7.1 Segfaults within Symfony test suite).
    (Dmitry, Laruence)
  . Fixed bug #74084 (Out of bound read - zend_mm_alloc_small). (Laruence)
  . Fixed bug #73807 (Performance problem with processing large post request).
    (Nikita)
  . Fixed bug #73998 (array_key_exists fails on arrays created by
    get_object_vars). (mhagstrand)
  . Fixed bug #73954 (NAN check fails on Alpine Linux with musl). (Andrea)
  . Fixed bug #73677 (Generating phar.phar core dump with gcc ASAN enabled
    build). (ondrej)

- Apache:
  . Fixed bug #61471 (Incomplete POST does not timeout but is passed to PHP).
    (Zheng Shao)

- Date:
  . Fixed bug #73837 ("new DateTime()" sometimes returns 1 second ago value).
    (Derick)

- FPM:
  . Fixed bug #69860 (php-fpm process accounting is broken with keepalive).
    (Denis Yeldandi)

- Hash:
  . Fixed bug #73127 (gost-crypto hash incorrect if input data contains long
    0xFF sequence). (Grundik)

- GD:
  . Fixed bug #74031 (ReflectionFunction for imagepng is missing last two
    parameters). (finwe)

- Mysqlnd:
  . Fixed bug #74021 (fetch_array broken data. Data more then MEDIUMBLOB).
    (Andrew Nester, Nikita)

- Opcache:
  . Fixed bug #74019 (Segfault with list). (Laruence)

- OpenSSL:
  . Fixed bug #74022 (PHP Fast CGI crashes when reading from a pfx file).
    (Anatol)